--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://106.53.246.80:3306/itbase?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://IP:PORT/itbase?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
